sys_src/deployment/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
namespace: nautical-nonsense
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: kondrauer/bdcc-team-blau:backend-0.0.1
          ports:
            - containerPort: 8000
