sys_src/deployment/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: nautical-nonsense
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: kondrauer/bdcc-team-blau:frontend-0.0.1
          ports:
            - containerPort: 80
          imagePullSecrets:
            - name: regcred
