sys_src/deployment/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: nautical-nonsense
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: backend
