sys_src/deployment/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: nautical-nonsense
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: frontend
